--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,20 @@
 <h1>Name Generator</h1>
-<form action="/names" method="post">
+<form action="/details" method="post">
   <label for="first_name">
-    First name
+    First name:
     <input type="type" name="first_name">
   </label>
   <label for="last_name">
-    Last name
+    Last name:
     <input type="type" name="last_name">
+  </label>
+  <label for="day">
+    Day:
+    <input type="type" name="day">
+  </label>
+  <label for="month">
+    Month:
+    <input type="type" name="month">
   </label>
   <input type="submit" value="Submit">
 </form>
