Added questions for name and DOB

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <h1>Name Generator</h1>
 <form action="/details" method="post">
+  <p>What's your name?</p>
   <label for="first_name">
     First name:
     <input type="type" name="first_name">
@@ -8,6 +9,7 @@
     Last name:
     <input type="type" name="last_name">
   </label>
+  <p>What's your DOB?</p>
   <label for="day">
     Day:
     <input type="type" name="day">
