--- a/views/generator.erb
+++ b/views/generator.erb
@@ -1,4 +1,4 @@
 <h1>Name Generator</h1>
 
 <p>Name: <%= @first_name %> <%= @last_name %></p>
-<p>DOB: <%= @day %>th <%= @month %></p>
+<p>DOB: <%= @day %> <%= @month %></p>
