--- a/views/generator.erb
+++ b/views/generator.erb
@@ -2,3 +2,4 @@
 
 <p>Name: <%= @first_name %> <%= @last_name %></p>
 <p>DOB: <%= @day %> <%= @month %></p>
+<p>Superhero name: <%= @superhero_name %></p>
