--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,21 @@
   </label>
   <label for="month">
     Month:
-    <input type="type" name="month">
+    <!-- <input type="type" name="month"> -->
+    <select name="month">
+      <option value="January">January</option>
+      <option value="February">February</option>
+      <option value="March">March</option>
+      <option value="April">April</option>
+      <option value="May">May</option>
+      <option value="June">June</option>
+      <option value="July">July</option>
+      <option value="August">August</option>
+      <option value="September">September</option>
+      <option value="October">October</option>
+      <option value="November">November</option>
+      <option value="December">December</option>
+    </select>
   </label>
   <input type="submit" value="Submit">
 </form>
